// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <div
      className="mfui-beta-benefits-icons-tile__content"
    >
      text
    </div>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile with html in text field 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <div
      className="mfui-beta-benefits-icons-tile__content"
    >
      <List
        as="ol"
        className=""
        color="red"
        key="0"
      >
        <ListItem
          className=""
          key="0"
        >
          <Paragraph
            className="mfui-beta-benefits-icons-tile__text"
            key="0"
          >
            пункт 1
          </Paragraph>
        </ListItem>
        <ListItem
          className=""
          key="1"
        >
          пункт 2
        </ListItem>
        <ListItem
          className=""
          key="2"
        >
          <TextLink
            className=""
            color="blue"
            key="0"
            underlineStyle="solid"
            underlineVisibility="hover"
          >
            пункт
          </TextLink>
           
          <component
            className=""
            key="2"
          >
            3
          </component>
        </ListItem>
      </List>
    </div>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile with html(span) in text field 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <div
      className="mfui-beta-benefits-icons-tile__content"
    >
      <component
        className=""
        key="0"
      >
        <component
          className=""
          key="0"
        >
          *
        </component>
        <component
          className=""
          key="1"
        >
          105
        </component>
      </component>
    </div>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without text 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without title 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <div
      className="mfui-beta-benefits-icons-tile__content"
    >
      text
    </div>
  </div>
</div>
`;
